--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
-    <height>430</height>
+    <width>1408</width>
+    <height>639</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -257,152 +257,6 @@ p, li { white-space: pre-wrap; }
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QLineEdit" name="le_velocity">
-    <property name="geometry">
-     <rect>
-      <x>599</x>
-      <y>80</y>
-      <width>200</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>120</width>
-      <height>40</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>200</width>
-      <height>16777215</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>Adobe 黑体 Std R</family>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLineEdit{
-	color: rgb(9, 202, 252);
-	border:2px solid rgb(9, 202, 252);
-	background-color:rgb(50, 50, 50, 0);
-	padding: 0px 0px 0px 10px;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>12.4</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="le_angle">
-    <property name="geometry">
-     <rect>
-      <x>599</x>
-      <y>130</y>
-      <width>200</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>120</width>
-      <height>40</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>200</width>
-      <height>16777215</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>Adobe 黑体 Std R</family>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLineEdit{
-	color: rgb(9, 202, 252);
-	border:2px solid rgb(9, 202, 252);
-	background-color:rgb(50, 50, 50, 0);
-	padding: 0px 0px 0px 10px;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>550.21</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="le_velocity_2">
-    <property name="geometry">
-     <rect>
-      <x>599</x>
-      <y>30</y>
-      <width>200</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>120</width>
-      <height>40</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>200</width>
-      <height>16777215</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>Adobe 黑体 Std R</family>
-      <pointsize>14</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLineEdit{
-	color: rgb(9, 202, 252);
-	border:2px solid rgb(9, 202, 252);
-	background-color:rgb(50, 50, 50, 0);
-	padding: 0px 0px 0px 10px;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>12.4</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>30</y>
-      <width>111</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial</family>
-      <pointsize>13</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border:2px solid  rgb(9, 202, 252);
-color: rgb(9, 202, 252);</string>
-    </property>
-    <property name="text">
-     <string>Angle</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
    <widget class="QLabel" name="lab_background">
     <property name="geometry">
      <rect>
@@ -484,9 +338,6 @@ QPushButton:hover{
 	background-color: rgb(9, 202, 252, 20);
 	color:rgb(217, 217, 217);
 	padding:10px;
-	
-	
-	
 	image: url(:/icons/icons/logIcon.png);
 }
 
@@ -580,151 +431,6 @@ QPushButton:hover{
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
-    <property name="geometry">
-     <rect>
-      <x>809</x>
-      <y>30</y>
-      <width>41</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	border:2px solid rgb(9, 202, 252);
-	background-color: rgb(9, 202, 252, 20);
-	color:rgb(217, 217, 217);
-	padding:10px;
-	
-	
-	image: url(:/icons/icons/splineIcon.png);
-}
-
-QPushButton:hover{
-
-	border:2px solid #53DCFF;
-	background-color: rgb(9, 202, 252, 100);
-}
-</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_7">
-    <property name="geometry">
-     <rect>
-      <x>809</x>
-      <y>80</y>
-      <width>41</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	border:2px solid rgb(9, 202, 252);
-	background-color: rgb(9, 202, 252, 20);
-	color:rgb(217, 217, 217);
-	padding:10px;
-	
-	
-	image: url(:/icons/icons/splineIcon.png);
-}
-
-QPushButton:hover{
-
-	border:2px solid #53DCFF;
-	background-color: rgb(9, 202, 252, 100);
-}
-</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_8">
-    <property name="geometry">
-     <rect>
-      <x>809</x>
-      <y>130</y>
-      <width>41</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	border:2px solid rgb(9, 202, 252);
-	background-color: rgb(9, 202, 252, 20);
-	color:rgb(217, 217, 217);
-	padding:10px;
-	
-	
-	image: url(:/icons/icons/splineIcon.png);
-}
-
-QPushButton:hover{
-
-	border:2px solid #53DCFF;
-	background-color: rgb(9, 202, 252, 100);
-}
-</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>80</y>
-      <width>111</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial</family>
-      <pointsize>13</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border:2px solid  rgb(9, 202, 252);
-color: rgb(9, 202, 252);</string>
-    </property>
-    <property name="text">
-     <string>Velocity</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>130</y>
-      <width>111</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Arial</family>
-      <pointsize>13</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border:2px solid  rgb(9, 202, 252);
-color: rgb(9, 202, 252);</string>
-    </property>
-    <property name="text">
-     <string>Accelerator</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
    <widget class="connectWidget" name="wdt_connect" native="true">
     <property name="geometry">
      <rect>
@@ -742,6 +448,337 @@ color: rgb(9, 202, 252);</string>
 	image: url(:/icons/icons/connection.png);</string>
     </property>
    </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>30</y>
+      <width>361</width>
+      <height>141</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QPushButton" name="pushButton_8">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>100</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+	border:2px solid rgb(9, 202, 252);
+	background-color: rgb(9, 202, 252, 20);
+	color:rgb(217, 217, 217);
+	padding:2px;
+	image: url(:/icons/icons/run.png);
+}
+QPushButton:hover{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+QPushButton:checked{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+
+</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="autoExclusive">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>50</y>
+       <width>111</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>13</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border:2px solid  rgb(9, 202, 252);
+color: rgb(9, 202, 252);</string>
+     </property>
+     <property name="text">
+      <string>Velocity</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="le_velocity">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>50</y>
+       <width>200</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>120</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Adobe 黑体 Std R</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit{
+	color: rgb(9, 202, 252);
+	border:2px solid rgb(9, 202, 252);
+	background-color:rgb(50, 50, 50, 0);
+	padding: 0px 0px 0px 10px;
+}
+</string>
+     </property>
+     <property name="text">
+      <string>12.4</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>0</y>
+       <width>111</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>13</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border:2px solid  rgb(9, 202, 252);
+color: rgb(9, 202, 252);</string>
+     </property>
+     <property name="text">
+      <string>Angle</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="le_angle">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>100</y>
+       <width>200</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>120</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Adobe 黑体 Std R</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit{
+	color: rgb(9, 202, 252);
+	border:2px solid rgb(9, 202, 252);
+	background-color:rgb(50, 50, 50, 0);
+	padding: 0px 0px 0px 10px;
+}
+</string>
+     </property>
+     <property name="text">
+      <string>550.21</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="le_velocity_2">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>0</y>
+       <width>200</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>120</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Adobe 黑体 Std R</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit{
+	color: rgb(9, 202, 252);
+	border:2px solid rgb(9, 202, 252);
+	background-color:rgb(50, 50, 50, 0);
+	padding: 0px 0px 0px 10px;
+}
+</string>
+     </property>
+     <property name="text">
+      <string>12.4</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>0</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+	border:2px solid rgb(9, 202, 252);
+	background-color: rgb(9, 202, 252, 20);
+	color:rgb(217, 217, 217);
+	padding:2px;
+	image: url(:/icons/icons/run.png);
+}
+QPushButton:hover{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+QPushButton:checked{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+
+</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+     <property name="autoExclusive">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_7">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>50</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+	border:2px solid rgb(9, 202, 252);
+	background-color: rgb(9, 202, 252, 20);
+	color:rgb(217, 217, 217);
+	padding:2px;
+	image: url(:/icons/icons/run.png);
+}
+QPushButton:hover{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+QPushButton:checked{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+
+</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="autoExclusive">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>100</y>
+       <width>111</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>13</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border:2px solid  rgb(9, 202, 252);
+color: rgb(9, 202, 252);</string>
+     </property>
+     <property name="text">
+      <string>Accelerator</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </widget>
    <zorder>lab_background</zorder>
    <zorder>label_13</zorder>
    <zorder>tw_connect</zorder>
@@ -750,21 +787,13 @@ color: rgb(9, 202, 252);</string>
    <zorder>graphicsView_charts</zorder>
    <zorder>bn_chart_stop</zorder>
    <zorder>dial</zorder>
-   <zorder>le_velocity</zorder>
-   <zorder>le_angle</zorder>
-   <zorder>le_velocity_2</zorder>
-   <zorder>label_5</zorder>
    <zorder>bn_close</zorder>
    <zorder>pushButton_2</zorder>
    <zorder>pushButton_3</zorder>
    <zorder>pushButton_5</zorder>
    <zorder>label</zorder>
-   <zorder>pushButton_6</zorder>
-   <zorder>pushButton_7</zorder>
-   <zorder>pushButton_8</zorder>
-   <zorder>label_6</zorder>
-   <zorder>label_7</zorder>
    <zorder>wdt_connect</zorder>
+   <zorder>frame</zorder>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
