--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1408</width>
-    <height>639</height>
+    <width>1300</width>
+    <height>437</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,114 +29,11 @@
 	
 </string>
    </property>
-   <widget class="QTabWidget" name="tw_connect">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>480</y>
-      <width>211</width>
-      <height>150</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>0</width>
-      <height>150</height>
-     </size>
-    </property>
-    <property name="font">
-     <font>
-      <family>Blogger Sans Light</family>
-      <pointsize>12</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
-QTabWidget::pane {
-background-color: green;
-left:5px;
-right:5px;
-bottom:5px;
-}
-
-QTabWidget QTabBar::tab {
-border-color: black;
-border-width: 3px;
-border-bottom:none;
-border-top-left-radius: 6px;
-border-top-right-radius: 6px;
-background:transparent;
-color:#EEEEEE;
-min-width:25ex;
-min-height:10ex;
-}
-
-QTabWidge QTabBar::tab:!selected:hover{
-width:100px;
-height:24px;
-background:rgb(255, 255, 255, 100);
-border-color: black;
-}
-
-QTabWidget QTabBar::tab:selected{
-background:#00ADB5;
-color:#222831;
-}
-
-QTabWidget QTabBar::tab:!selected{
-background:none;
-color:#EEEEEE;
-border:none;
-}
-</string>
-    </property>
-    <property name="currentIndex">
-     <number>1</number>
-    </property>
-    <widget class="QWidget" name="tab">
-     <attribute name="title">
-      <string>Tab 1</string>
-     </attribute>
-    </widget>
-    <widget class="QWidget" name="tab_2">
-     <attribute name="title">
-      <string>Tab 2</string>
-     </attribute>
-     <widget class="QLabel" name="lab_background_2">
-      <property name="geometry">
-       <rect>
-        <x>-140</x>
-        <y>20</y>
-        <width>350</width>
-        <height>200</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgba(47, 47, 47, 230);
-/*
-border-top-right-radius:40;
-border-bottom-right-radius:40;
-*/</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </widget>
-   </widget>
    <widget class="QPushButton" name="bn_clearlog">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>720</y>
+      <x>460</x>
+      <y>490</y>
       <width>71</width>
       <height>23</height>
      </rect>
@@ -148,10 +45,10 @@ border-bottom-right-radius:40;
    <widget class="QTextEdit" name="te_log">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>694</y>
-      <width>281</width>
-      <height>111</height>
+      <x>480</x>
+      <y>240</y>
+      <width>391</width>
+      <height>181</height>
      </rect>
     </property>
     <property name="font">
@@ -160,7 +57,7 @@ border-bottom-right-radius:40;
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true"/>
+     <string notr="true">color: rgb(65, 65, 65);</string>
     </property>
     <property name="verticalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOff</enum>
@@ -179,10 +76,10 @@ p, li { white-space: pre-wrap; }
    <widget class="QCustomPlot" name="graphicsView_charts">
     <property name="geometry">
      <rect>
-      <x>1280</x>
-      <y>10</y>
+      <x>80</x>
+      <y>490</y>
       <width>351</width>
-      <height>398</height>
+      <height>201</height>
      </rect>
     </property>
     <property name="minimumSize">
@@ -195,8 +92,8 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="bn_chart_stop">
     <property name="geometry">
      <rect>
-      <x>910</x>
-      <y>680</y>
+      <x>470</x>
+      <y>520</y>
       <width>75</width>
       <height>81</height>
      </rect>
@@ -323,7 +220,7 @@ QPushButton:hover{
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="bn_log">
     <property name="geometry">
      <rect>
       <x>59</x>
@@ -454,7 +351,7 @@ QPushButton:hover{
       <x>480</x>
       <y>30</y>
       <width>361</width>
-      <height>141</height>
+      <height>211</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -463,7 +360,7 @@ QPushButton:hover{
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QPushButton" name="pushButton_8">
+    <widget class="QPushButton" name="bn_run">
      <property name="geometry">
       <rect>
        <x>320</x>
@@ -474,7 +371,7 @@ QPushButton:hover{
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton{
-	border:2px solid rgb(9, 202, 252);
+	border:2px solid rgb(200, 200, 200);
 	background-color: rgb(9, 202, 252, 20);
 	color:rgb(217, 217, 217);
 	padding:2px;
@@ -561,6 +458,20 @@ color: rgb(9, 202, 252);</string>
 	background-color:rgb(50, 50, 50, 0);
 	padding: 0px 0px 0px 10px;
 }
+QLineEdit{
+	color: rgb(9, 202, 252);
+	border:2px solid rgb(9, 202, 252);
+	background-color:rgb(50, 50, 50, 0);
+	padding: 0px 0px 0px 10px;
+}
+
+QLineEdit{
+	color: rgb(9, 202, 252);
+	border:2px solid rgb(9, 202, 252);
+	background-color:rgb(50, 50, 50, 0);
+	padding: 0px 0px 0px 10px;
+}
+
 </string>
      </property>
      <property name="text">
@@ -597,7 +508,7 @@ color: rgb(9, 202, 252);</string>
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>100</y>
+       <y>0</y>
        <width>200</width>
        <height>40</height>
       </rect>
@@ -633,47 +544,7 @@ color: rgb(9, 202, 252);</string>
       <string>550.21</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="le_velocity_2">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>0</y>
-       <width>200</width>
-       <height>40</height>
-      </rect>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>120</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>200</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <family>Adobe 黑体 Std R</family>
-       <pointsize>14</pointsize>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QLineEdit{
-	color: rgb(9, 202, 252);
-	border:2px solid rgb(9, 202, 252);
-	background-color:rgb(50, 50, 50, 0);
-	padding: 0px 0px 0px 10px;
-}
-</string>
-     </property>
-     <property name="text">
-      <string>12.4</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_6">
+    <widget class="QPushButton" name="bn_run_angle">
      <property name="geometry">
       <rect>
        <x>320</x>
@@ -684,7 +555,7 @@ color: rgb(9, 202, 252);</string>
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton{
-	border:2px solid rgb(9, 202, 252);
+	border:2px solid rgb(200, 200, 200);
 	background-color: rgb(9, 202, 252, 20);
 	color:rgb(217, 217, 217);
 	padding:2px;
@@ -714,7 +585,7 @@ QPushButton:checked{
       <bool>true</bool>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_7">
+    <widget class="QPushButton" name="bn_run_velocity">
      <property name="geometry">
       <rect>
        <x>320</x>
@@ -725,7 +596,7 @@ QPushButton:checked{
      </property>
      <property name="styleSheet">
       <string notr="true">QPushButton{
-	border:2px solid rgb(9, 202, 252);
+	border:2px solid rgb(200, 200, 200);
 	background-color: rgb(9, 202, 252, 20);
 	color:rgb(217, 217, 217);
 	padding:2px;
@@ -778,20 +649,100 @@ color: rgb(9, 202, 252);</string>
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
+    <widget class="QLineEdit" name="le_">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>100</y>
+       <width>200</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>120</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Adobe 黑体 Std R</family>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QLineEdit{
+	color: rgb(9, 202, 252);
+	border:2px solid rgb(9, 202, 252);
+	background-color:rgb(50, 50, 50, 0);
+	padding: 0px 0px 0px 10px;
+}
+</string>
+     </property>
+     <property name="text">
+      <string>12.4</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="bn_run_idle">
+     <property name="geometry">
+      <rect>
+       <x>320</x>
+       <y>150</y>
+       <width>41</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+	border:2px solid rgb(200, 200, 200);
+	background-color: rgb(9, 202, 252, 20);
+	color:rgb(217, 217, 217);
+	padding:2px;
+	image: url(:/icons/icons/run.png);
+}
+QPushButton:hover{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+QPushButton:checked{
+	border:2px solid #53DCFF;
+	background-color: rgb(9, 202, 252, 100);
+}
+
+</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <property name="autoExclusive">
+      <bool>true</bool>
+     </property>
+    </widget>
    </widget>
    <zorder>lab_background</zorder>
+   <zorder>label</zorder>
    <zorder>label_13</zorder>
-   <zorder>tw_connect</zorder>
+   <zorder>dial</zorder>
    <zorder>bn_clearlog</zorder>
    <zorder>te_log</zorder>
    <zorder>graphicsView_charts</zorder>
    <zorder>bn_chart_stop</zorder>
-   <zorder>dial</zorder>
    <zorder>bn_close</zorder>
-   <zorder>pushButton_2</zorder>
+   <zorder>bn_log</zorder>
    <zorder>pushButton_3</zorder>
    <zorder>pushButton_5</zorder>
-   <zorder>label</zorder>
    <zorder>wdt_connect</zorder>
    <zorder>frame</zorder>
   </widget>
@@ -802,6 +753,9 @@ color: rgb(9, 202, 252);</string>
    <class>motordial</class>
    <extends>QDial</extends>
    <header>motordial.h</header>
+   <slots>
+    <signal>sig_pressed(bool)</signal>
+   </slots>
   </customwidget>
   <customwidget>
    <class>QCustomPlot</class>
