--- a/resource.qrc
+++ b/resource.qrc
@@ -14,5 +14,7 @@
         <file>icons/usb_45.png</file>
         <file>icons/setting.png</file>
         <file>icons/run.png</file>
+        <file>icons/hoverIn.gif</file>
+        <file>icons/hoverout.gif</file>
     </qresource>
 </RCC>
